-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.11.0 FF
-
None
-
-
9a1c5f5ef (dev)
FAIL! : qmltest::UnknownTestFunc() Received a fatal error. Loc: *[/Users/qt/work/qt/qtquick3d/src/utils/qssgbounds3_p.h(250)] Received signal 11 (SIGSEGV), code SEGV_ACCERR, at instruction address 0x0000000104e402f4, accessing address 0x0000000000000028 agent:2025/06/18 03:43:06 build.go:412: [Non-test] function time: 635ms, total time: 885ms
Details: https://testresults.qt.io/coin/integration/qt/qtgraphs/tasks/1750218085
Tested changes (refs/builds/qtci/dev/1750218083):
https://codereview.qt-project.org/c/qt/qtgraphs/+/653968/2 Update dependencies on 'dev' in qt/qtgraphs
For Gerrit Dashboard: QTBUG-137852 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
654377,5 | Handle invalid bounds in shadow map culling | dev | qt/qtquick3d | Status: MERGED | +2 | +1 |