Handle invalid bounds in shadow map culling

Although it is probably invalid, some models can have bounds that have
nan values, so check if the bounds are finite (not nan) before trying to
use them for culling.

amends: 52d7d5fd47f2363f25fc1336df3314542ad63eb7

Fixes: QTBUG-137852
Change-Id: I5edb0cf4fe2ffe730f3b97f534ecee6a23036bbc
Reviewed-by: Christian Strømme <christian.stromme@qt.io>